--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -4706,9 +4706,9 @@ select::-ms-expand {
   width: 100vw;
   z-index: 1000;
   visibility: hidden;
-  opacity: 0;
+  opacity: 0.5;
   background: #363636;
-  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+  transition: visibility 0.3s ease-in-out;
 }
 
 .PageOverlay.is-visible {
