fix pdp dropdown bug

--- a/snippets/product-form.liquid
+++ b/snippets/product-form.liquid
@@ -42,9 +42,9 @@ for size, we use it to display a size chart (if applicable)
   <a {% if link.current %}style="display:none;"{% endif %} href="{{ link.url }}">{{ link.title }}</a>
 {% endfor %}
 
-          
+
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 29.26 16.93"><g id="b4e1ea09-4406-4a9a-b507-062bfdb3322a" data-name="Layer 2"><g id="a655b1e7-9d90-4385-9140-bd881b6a0234" data-name="ART"><polyline points="1.03 1.02 14.68 14.85 28.22 1.02" style="fill:none;stroke-miterlimit:10;stroke-width:2.90440928936005px"/></g></g></svg>
+        <svg style="z-index:-1;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 29.26 16.93"><g id="b4e1ea09-4406-4a9a-b507-062bfdb3322a" data-name="Layer 2"><g id="a655b1e7-9d90-4385-9140-bd881b6a0234" data-name="ART"><polyline points="1.03 1.02 14.68 14.85 28.22 1.02" style="fill:none;stroke-miterlimit:10;stroke-width:2.90440928936005px"/></g></g></svg>
       </div>
     </div>
     {% endunless %}
