complete klaviyo setup. correct small bugs on collections and pdp pages.

--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -237,7 +237,7 @@
       <div class='product-info-line'>
         <svg id='info-left-arrow' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14.12 23.61"><g id="b5066a2a-b61c-4be4-9e07-600d56ab6513" data-name="Layer 2"><g id="bebbd190-e032-46c7-8757-8ee537c5d4d7" data-name="ART"><polyline points="13.07 22.54 2.14 11.77 13.07 1.07" style="fill:none;stroke-miterlimit:10;stroke-width:3px"/></g></g></svg>
         <div class='product-more-info product-more-info-mobile'>
-          {% for p in collections[section.settings.flavors].products %}
+          {% for p in collections["more-flavors"].products %}
               {% if p.handle != product.handle %}
                 <a href='{{ p.url }}' class='more-product-info'>
                   <h3>{{ p.title }}</h3>
