--- a/sections/collection-template.liquid
+++ b/sections/collection-template.liquid
@@ -1,3 +1,5 @@
+<script async type="text/javascript" src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=H7RqBs"></script>
+
 <section id="section-{{ section.id }}" data-section-id="{{ section.id }}" class='collection'>
   <div class='collection-hero'>
       <div class='collection-mobile-title'>
@@ -54,7 +56,7 @@
                 <h2 id="seventh-tile-subheading">New flavors & discount codes? Sign up Above!</h2>
               
               <form id='seventh-tile-newsletter' action="//manage.kmail-lists.com/subscriptions/subscribe" data-ajax-submit="//manage.kmail-lists.com/ajax/subscriptions/subscribe" method="GET" target="_blank" novalidate="novalidate">
-                <input type="hidden" name="g" value="{{ section.settings.klaviyo }}">
+                <input type="hidden" name="g" value="SUKqs8">
                 <input type="hidden" name="$fields" value="$consent">
                 <input type="hidden" name="$list_fields" value="$consent">
         
@@ -62,7 +64,7 @@
                   <input type="email" name="email" class="footer-newsletter-input" id="seventh-tile-newsletter-input" aria-label="{{ 'footer.newsletter.input' | t }}" placeholder="Your Email Address" required>
                   <button type="submit" class='newsletter-submit'><img src='https://cdn.shopify.com/s/files/1/2340/1623/files/submit-arrow-blue.png?v=1655425245' class='submit-arrow' id="seventh-tile-button"/></button>
                 </div>
-                <div class="klaviyo_messages">
+                <div class="klaviyo_messages" id="seventh-tile-success-messages">
                   <div class="success_message" style="display:none;">Thanks!</div>
                   <div class="error_message" style="display:none;">Error submitting email.</div>
                 </div>
@@ -91,7 +93,7 @@
   
 </section>
 
-<div style=''>
+<div style='display:none;'>
   {% for product in collections['test-collection'].products %}
     {%- capture section_settings -%}
       {
@@ -154,9 +156,11 @@
 
   function subtractQuantity(object, id){
     event.preventDefault(); 
-    $(object).siblings('input').val(parseInt($(object).siblings('input').val()) - 1)
-    let liveQuantity = $('[data-qty-upsell-id="'+id+'"]')
-    liveQuantity.val(parseInt(liveQuantity.val()) - 1);
+    if ($(object).siblings('input').val() > 1){
+      $(object).siblings('input').val(parseInt($(object).siblings('input').val()) - 1)
+      let liveQuantity = $('[data-qty-upsell-id="'+id+'"]')
+      liveQuantity.val(parseInt(liveQuantity.val()) - 1);
+    }
   }
 
   function updateQuantity(q, id) {
@@ -486,7 +490,7 @@
     text-align:center;
     position:absolute;
     padding: 0 60px;
-    top:475px;
+    top:500px;
   }
 
   h2#ninth-tile-subheading{
@@ -530,7 +534,7 @@ div#seventh-tile-newsletter-line{
   }
   h2#ninth-tile-subheading, h2#seventh-tile-subheading{
     font-size:20px;
-    top:375px;
+    top:400px;
   }
 }
 
@@ -540,6 +544,12 @@ div#seventh-tile-newsletter-line{
     margin-top:0;
   }
 }
+
+div#seventh-tile-success-messages{
+  color:#00a7e1;
+}
+
+{% comment %} END {% endcomment %}
 
 </style>
 
