--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -40,7 +40,7 @@
     	    <input type="email" name="email" class="footer-newsletter-input" aria-label="{{ 'footer.newsletter.input' | t }}" placeholder="Your Email Address" required>
 	        <button type="submit" class='newsletter-submit'><img src='{{ 'submit-arrow.svg' | asset_url }}' class='submit-arrow'/></button>
         </div>
-        <div class="klaviyo_messages">
+        <div class="klaviyo_messages" id="footer-success-messages">
           <div class="success_message" style="display:none;">Thanks!</div>
           <div class="error_message" style="display:none;">Error submitting email.</div>
         </div>
@@ -188,6 +188,18 @@
    	display: flex;
     flex-direction: column;
   }
+
+  {% comment %} ADDED BY DG 7/5/22 {% endcomment %}
+
+  div.klaviyo_messages div.success_message{
+    text-align:center;
+  }
+
+  div#footer-success-messages{
+    color:#ff5f00;
+  }
+  
+  {% comment %} END {% endcomment %}
   
   .footer-links a, .footer-social .label {
     font-family: 'Goldplay-SemiBold', inherit;
@@ -253,6 +265,8 @@
   }
 
 </style>
+
+{% comment %} <script async type="text/javascript" src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=H7RqBs"></script> {% endcomment %}
 
 <script type="text/javascript" src="//www.klaviyo.com/media/js/public/klaviyo_subscribe.js"></script>
 {{ 'flickity.min.js' | asset_url | script_tag }}
