update sampler pack landing price

--- a/sections/sampler-envelope-insert.liquid
+++ b/sections/sampler-envelope-insert.liquid
@@ -715,6 +715,11 @@
   }
     
 /*   ADDED BY DANIEL GOLDBERG - 5/26/22   */
+
+  span#sampler-crossed-price{
+    text-decoration: line-through; 
+    display:inline;
+  }
     
   img.top-curve-new{
    width: 100%; 
