--- a/snippets/product-form.liquid
+++ b/snippets/product-form.liquid
@@ -80,7 +80,7 @@ for size, we use it to display a size chart (if applicable)
 
   {% if page.title == "Sampler Pack Landing" %}
     <div id="sampler-pack-price-container">
-      <span id="sampler-pack-otp">Price: $5.99</span> 
+      <span id="sampler-pack-otp">Price: <span id="sampler-crossed-price" style="display:inline;">$5.99</span> $0.00</span> 
     </div>
   {% elsif product.id == 7745391984878 %}
     {% render 'bsub-widget', triple: false, product: product, base_price: base_price, show_base_price: show_base_price %}
