Update sampler pack landing page pricing display

--- a/sections/sampler-envelope-insert.liquid
+++ b/sections/sampler-envelope-insert.liquid
@@ -718,7 +718,15 @@
 
   span#sampler-crossed-price{
     text-decoration: line-through; 
-    display:inline;
+  }
+
+  span#sampler-real-price{
+    color:#eb6a27;
+    font-weight:bold;
+  }
+
+  span#sampler-pack-price-otp{
+    font-weight:400;
   }
     
   img.top-curve-new{
