minimize sampler landing product image

--- a/sections/sampler-envelope-insert.liquid
+++ b/sections/sampler-envelope-insert.liquid
@@ -43,7 +43,7 @@
                       {%- render 'product-form', showQty: 'no', triple: 'no', productPage: true, product: product -%} 
                   </div>
                   <div class='product-image'>
-                    <img style="max-width:100%;" class='Image--lazyLoad' data-src='https://cdn.shopify.com/s/files/1/2340/1623/files/crafmix-sampler-2.png?v=1653671814'/>
+                    <img style="max-width:100%;" class='Image--lazyLoad' data-src='https://cdn.shopify.com/s/files/1/2340/1623/files/crafmix-sampler-2_1.jpg?v=1659976111'/>
                   </div>
                 </div>
             </div>
